--- a/templates/dashboards/index.html
+++ b/templates/dashboards/index.html
@@ -2,4 +2,12 @@
 
 {% block content %}
     <h1>Dashboard List</h1>
+
+    <div>
+        {% for dashboard in dashboards %}
+            <p>{{ dashboard.name }}</p>
+            <p>{{ dashboard.quicksight_id }}</p>
+            <p>{{ dashboard.admins }}</p>
+        {% endfor %}
+    </div>
 {% endblock content %}
