Embed dashboard using QS js sdk
Temp add this via script in HTML, this will be updated to install
with npm when static build has been added

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,5 +3,10 @@
 
 {% block title %}Analytical Platform Dashboard Service{% endblock title %}
 
-{% block content %}
-{% endblock content %}
+<body class="govuk-template__body govuk-frontend-supported" {% block body_attributes %}{% endblock body_attributes %}>
+    {% block content %}
+    {% endblock content %}
+
+    {% block scripts %}
+    {% endblock scripts %}
+</body>
