--- a/templates/dashboards/index.html
+++ b/templates/dashboards/index.html
@@ -8,6 +8,7 @@
             <p>{{ dashboard.name }}</p>
             <p>{{ dashboard.quicksight_id }}</p>
             <p>{{ dashboard.admins }}</p>
+            <p><a href="{% url "dashboards:detail" quicksight_id=dashboard.quicksight_id %}">View dashboard</a></p>
         {% endfor %}
     </div>
 {% endblock content %}
