Build JS and add base template

--- a/templates/dashboards/detail.html
+++ b/templates/dashboards/detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 
 {% block body_attributes %}onload="embedDashboard()"{% endblock body_attributes %}
 
