--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,7 +1,9 @@
 $govuk-assets-path: "/static/assets/";
 
  /* stylelint-disable import-notation */
+ $govuk-suppressed-warnings: (
+    "legacy-organisation-colours"
+);
 @import "node_modules/govuk-frontend/dist/govuk/index";
-@import "node_modules/@ministryofjustice/frontend/moj/all";
 
  /* stylelint-enable */
