--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,41 +3,43 @@
 
 <html lang="en" class="govuk-template app-html-class">
 
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Analytical Platform Dashboard Service{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="theme-color" content="blue">
-    <link rel="icon" sizes="48x48" href="{% static 'assets/images/favicon.ico' %}">
-    <link rel="icon" sizes="any" href="{% static 'assets/images/favicon.svg' %}" type="image/svg+xml">
-    <link rel="mask-icon" href="{% static 'assets/images/govuk-icon-mask.svg' %}" color="blue">
-    <link rel="apple-touch-icon" href="{% static 'assets/images/govuk-icon-180.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/app.css' %}">
-    <meta property="og:image" content="{% static 'assets/images/govuk-opengraph-image.png' %}">
-    <meta name="robots" content="noindex, nofollow" />
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}Analytical Platform Dashboard Service{% endblock title %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="theme-color" content="blue">
+  <link rel="icon" sizes="48x48" href="{% static 'assets/images/favicon.ico' %}">
+  <link rel="icon" sizes="any" href="{% static 'assets/images/favicon.svg' %}" type="image/svg+xml">
+  <link rel="mask-icon" href="{% static 'assets/images/govuk-icon-mask.svg' %}" color="blue">
+  <link rel="apple-touch-icon" href="{% static 'assets/images/govuk-icon-180.png' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/app.css' %}">
+  <meta property="og:image" content="{% static 'assets/images/govuk-opengraph-image.png' %}">
+  <meta name="robots" content="noindex, nofollow" />
+</head>
 
 
 <body class="govuk-template__body" {% block body_attributes %}{% endblock body_attributes %}>
-    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+  <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 
-    {% block main %}
-    <div class="govuk-width-container app-width-container">
+  {% include 'base/header.html' %}
 
-        <main class="govuk-main-wrapper" id="main-content" role="main">
-            {% block content %}
-            {% endblock content %}
-        </main>
-    </div>
-    {% endblock main %}
+  {% block main %}
+  <div class="govuk-width-container app-width-container">
 
-    {% include 'base/footer.html' %}
+    <main class="govuk-main-wrapper" id="main-content" role="main">
+      {% block content %}
+      {% endblock content %}
+    </main>
+  </div>
+  {% endblock main %}
 
-    {% block scripts %}
-    {% endblock scripts %}
-    <script type="module" src="{% static 'assets/js/govuk-frontend.min.js' %}"></script>
-    <script type="module">
-        import { initAll } from "{% static 'assets/js/govuk-frontend.min.js' %}"
-        initAll()
-    </script>
+  {% include 'base/footer.html' %}
+
+  {% block scripts %}
+  {% endblock scripts %}
+  <script type="module" src="{% static 'assets/js/govuk-frontend.min.js' %}"></script>
+  <script type="module">
+    import { initAll } from "{% static 'assets/js/govuk-frontend.min.js' %}"
+    initAll()
+  </script>
 </body>
