--- a/templates/dashboards/detail.html
+++ b/templates/dashboards/detail.html
@@ -4,14 +4,15 @@
 
 {% block title %}Analytical Platform Dashboard Service{% endblock title %}
 
+{% block base_div_class %}govuk-grid-column-full{% endblock base_div_class %}
+
 {% block content %}
-    <h1>Dashboard {{dashboard.name }}</h1>
 
-    <p>Admins: {{ dashboard.admins }}</p>
+  <h1 class="govuk-heading-l">Dashboard: {{dashboard.name }}</h1>
+  <p class="govuk-body">Admins: {{ dashboard_admins }}</p>
 
-    <body onload="embedDashboard()">
-        <div id="experience-container"></div>
-    </body>
+  <div id="experience-container"></div>
+
 
 {% endblock content %}
 
