--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -11,7 +11,11 @@
       <nav class="moj-header__navigation" aria-label="Account navigation">
         <ul class="moj-header__navigation-list">
           <li class="moj-header__navigation-item">
-            <a class="moj-header__navigation-link" href="{% url "logout" %}">Sign out</a>
+            {% if request.user.is_authenticated %}
+              <a class="moj-header__navigation-link" href="{% url "logout" %}">Sign out</a>
+            {% else %}
+              <a class="moj-header__navigation-link" href="{% url "login" %}">Login</a>
+            {% endif %}
           </li>
         </ul>
       </nav>
@@ -19,16 +23,18 @@
   </div>
 </header>
 
-<div class="moj-primary-navigation">
-  <div class="moj-primary-navigation__container">
-    <div class="moj-primary-navigation__nav">
-      <nav class="moj-primary-navigation" aria-label="Primary navigation">
-        <ul class="moj-primary-navigation__list">
-          <li class="moj-primary-navigation__item">
-            <a class="moj-primary-navigation__link" aria-current="page" href="{% url "dashboards:index" %}">Dashboards</a>
-          </li>
-        </ul>
-      </nav>
+{% if request.user.is_authenticated %}
+  <div class="moj-primary-navigation">
+    <div class="moj-primary-navigation__container">
+      <div class="moj-primary-navigation__nav">
+        <nav class="moj-primary-navigation" aria-label="Primary navigation">
+          <ul class="moj-primary-navigation__list">
+            <li class="moj-primary-navigation__item">
+              <a class="moj-primary-navigation__link" aria-current="page" href="{% url "dashboards:index" %}">Dashboards</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
