Add link to support email

--- a/templates/login/login_fail.html
+++ b/templates/login/login_fail.html
@@ -5,8 +5,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-width-container">
     <h1 class="govuk-heading-l">Login failed</h1>
-    <p class="govuk-body">We were unable to log you in, <a href="{% url "login" %}">please retry</a>.</p>
-    <p class="govuk-body">If the problem persists contact Analytical Platform support.</p>
+    <p class="govuk-body">We were unable to log you in, <a href="{% url "login" %}" class="govuk-link">please retry</a>.</p>
+    <p class="govuk-body">If the problem persists email Analytical Platform at <a href="mailto:analytical-platform@justice.gov.uk" class="govuk-link">analytical-platform@justice.gov.uk</a></p>
   </div>
 </div>
 {% endblock %}
