Changes links in header to go to homepage

--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -2,10 +2,10 @@
   <div class="moj-header__container">
     <div class="moj-header__logo">
       {% include "base/moj_header.svg" %}
-      <a class="moj-header__link moj-header__link--organisation-name"
-        href="https://www.gov.uk/government/organisations/ministry-of-justice">Ministry of Justice</a>
-      <a class="moj-header__link moj-header__link--service-name"
-        href="https://github.com/ministryofjustice/analytical-platform">Analytical Platform Dashboards</a>
+      <a class="moj-header__link"href="/">
+        <span class="moj-header__link--organisation-name">Ministry of Justice</span>
+        <span class="moj-header__link--service-name">Analytical Platform Dashboards</span>
+      </a>
     </div>
     <div class="moj-header__content">
       <nav class="moj-header__navigation" aria-label="Account navigation">
