--- a/templates/dashboards/detail.html
+++ b/templates/dashboards/detail.html
@@ -8,11 +8,11 @@
 
 {% block content %}
 
-  <h1 class="govuk-heading-l">Dashboard: {{dashboard.name }}</h1>
-  <p class="govuk-body">Admins: {{ dashboard_admins }}</p>
-
-  <div id="experience-container"></div>
-
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <div id="experience-container"></div>
+  </div>
+</div>
 
 {% endblock content %}
 
