Re-add dashboard name, footer

--- a/templates/dashboards/detail.html
+++ b/templates/dashboards/detail.html
@@ -10,6 +10,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-l">{{ dashboard.name }}</h1>
     <div id="experience-container"></div>
   </div>
 </div>
@@ -95,6 +96,3 @@
     </script>
 
 {% endblock scripts %}
-
-{% block footer %}
-{% endblock footer %}
