--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -2,10 +2,10 @@
   <div class="moj-header__container">
     <div class="moj-header__logo">
       {% include "base/moj_header.svg" %}
-      <a class="moj-header__link moj-header__link--organisation-name"
-        href="https://www.gov.uk/government/organisations/ministry-of-justice">Ministry of Justice</a>
-      <a class="moj-header__link moj-header__link--service-name"
-        href="https://github.com/ministryofjustice/analytical-platform">Analytical Platform Dashboards</a>
+      <a class="moj-header__link"href="/">
+        <span class="moj-header__link--organisation-name">Ministry of Justice</span>
+        <span class="moj-header__link--service-name">Analytical Platform Dashboards</span>
+      </a>
     </div>
     <div class="moj-header__content">
       <nav class="moj-header__navigation" aria-label="Account navigation">
@@ -22,19 +22,3 @@
     </div>
   </div>
 </header>
-
-{% if request.user.is_authenticated %}
-  <div class="moj-primary-navigation">
-    <div class="moj-primary-navigation__container">
-      <div class="moj-primary-navigation__nav">
-        <nav class="moj-primary-navigation" aria-label="Primary navigation">
-          <ul class="moj-primary-navigation__list">
-            <li class="moj-primary-navigation__item">
-              <a class="moj-primary-navigation__link" aria-current="page" href="{% url "dashboards:index" %}">Dashboards</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </div>
-{% endif %}
