--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -21,6 +21,10 @@
 <body class="govuk-template__body" {% block body_attributes %}{% endblock body_attributes %}>
   <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
 
+  {% block skip_link %}
+    <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+  {% endblock skip_link %}
+
   {% include 'base/header.html' %}
 
   {% block main %}
