--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Analytical Platform Dashboard Service{% endblock title %}</title>
+  <title>{% block title %}Analytical Platform Dashboards | Ministry of Justice{% endblock title %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="blue">
   <link rel="icon" sizes="48x48" href="{% static 'assets/images/favicon.ico' %}">
