--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Analytical Platform Dashboard Service{% endblock title %}</title>
+  <title>{% block title %}Analytical Platform Dashboards | Ministry of Justice{% endblock title %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="blue">
   <link rel="icon" sizes="48x48" href="{% static 'assets/images/favicon.ico' %}">
@@ -20,6 +20,10 @@
 
 <body class="govuk-template__body" {% block body_attributes %}{% endblock body_attributes %}>
   <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
+
+  {% block skip_link %}
+    <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+  {% endblock skip_link %}
 
   {% include 'base/header.html' %}
 
